manager/misc/.dev/debug.yml
# debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: debug
  name: debug
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: debug
      namespace: kube-system
    spec:
      containers:
      - args:
        - |-
          apk add curl jq openssl bash bind-tools
          sleep infinity
        command:
        - /bin/sh
        - -c
        image: alpine:3.18
        name: alpine
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
status: {}
